--- a/CardGame/app/src/main/res/layout/activity_main.xml
+++ b/CardGame/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:opencv="http://schemas.android.com/apk/res-auto"
     tools:context="dcc.up.pt.cardgame.MainActivity">
 
 
         <org.opencv.android.JavaCameraView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:visibility="gone"
-            android:id="@+id/camera_view" />
+            android:id="@+id/camera_view"
+            opencv:show_fps="true" />
 
 </android.support.constraint.ConstraintLayout>
