--- a/CardGame/app/src/main/res/layout/activity_main.xml
+++ b/CardGame/app/src/main/res/layout/activity_main.xml
@@ -5,38 +5,46 @@
     android:layout_height="match_parent"
     tools:context="dcc.up.pt.cardgame.MainActivity">
     <FrameLayout
-            android:id="@+id/container"
+            android:id="@+id/frame_container"
             android:layout_alignParentTop="true"
-        android:layout_above="@id/menu"
+        android:layout_above="@id/layout_action"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+    <TextView
+        android:id="@+id/text_instruction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignTop="@+id/frame_container"
+        android:layout_marginTop="48dp"
+        android:gravity="center"
+        android:textColor="@color/colorAccent"
+        android:shadowColor="@color/colorTransparent"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="1.8"
+        android:textAllCaps="true"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textSize="22sp"
+        android:fontFamily="sans-serif"
+        android:text="@string/placeholder"/>
     <LinearLayout
-        android:id="@+id/menu"
+        android:id="@+id/layout_action"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:padding="16dp"
+        android:elevation="4dp"
+        android:padding="8dp"
+        android:background="@color/colorPrimaryDark"
         android:layout_alignParentBottom="true">
         <TextView
-            android:id="@+id/status"
+            android:id="@+id/text_status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textAlignment="center"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/card_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"/>
-            <SeekBar
-                android:id="@+id/spin_bar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center" />
-        </LinearLayout>
+            android:textSize="22sp"
+            android:textAlignment="center"
+            android:textColor="@color/colorWhite"
+            android:text="@string/placeholder"/>
     </LinearLayout>
 </RelativeLayout>
