--- a/CardGame/app/src/main/res/layout/fragment_camera.xml
+++ b/CardGame/app/src/main/res/layout/fragment_camera.xml
@@ -2,11 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="64dp"
     xmlns:opencv="http://schemas.android.com/apk/res-auto">
     <org.opencv.android.JavaCameraView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:visibility="gone"
         android:id="@+id/camera_view"
         opencv:show_fps="true" />
