--- a/CardGame/app/src/main/res/values/colors.xml
+++ b/CardGame/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorBlack">#000</color>
+    <color name="colorWhite">#fff</color>
+    <color name="colorAccent">#c62828</color>
+    <color name="colorTransparent">#96ffffff</color>
 </resources>
