Implement everything in C++ to improve performances

--- a/CardGame/app/src/main/res/layout/fragment_camera.xml
+++ b/CardGame/app/src/main/res/layout/fragment_camera.xml
@@ -9,4 +9,11 @@
         android:visibility="gone"
         android:id="@+id/camera_view"
         opencv:show_fps="true" />
+    <ImageView
+        android:id="@+id/image_preview"
+        android:background="@color/colorBlack"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:contentDescription="@string/image_preview"/>
 </FrameLayout>
