--- a/CardGame/app/src/main/res/layout/fragment_start.xml
+++ b/CardGame/app/src/main/res/layout/fragment_start.xml
@@ -10,4 +10,11 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="@string/start"/>
+    <SeekBar
+        android:id="@+id/bar_values"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <SeekBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
